<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="@dimen/fab_margin"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/black"
            android:text="@string/dialog_param_light_lum_max"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <EditText
            android:inputType="numberDecimal"
            android:id="@+id/lum_max"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/black"
            android:text="@string/dialog_param_light_lum_auto"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Switch
            android:id="@+id/lum_auto"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/black"
            android:text="@string/dialog_param_light_lum_active"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Switch
            android:id="@+id/lum_active"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>