<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:text="@string/content_main_luminosity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginBottom="10dp"
                    android:textSize="45sp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    android:text="###"
                    android:id="@+id/lum_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:padding="10dp"
                android:orientation="horizontal"
                android:background="@drawable/background_temp_block"
                android:elevation="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:text="@string/content_brightness_title"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/state"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:text=""
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:text="@string/settings"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@android:color/black"
                        android:text="@string/dialog_param_light_lum_max"
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <TextView
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/lum_max"
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@android:color/black"
                        android:text="@string/dialog_param_light_lum_auto"
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <TextView
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/lum_auto"
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>